unpackaged/objects/Report_Package_Line__c.object
<CustomObject>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>Report_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Package</label>
    <referenceTo>Report_Package__c</referenceTo>
    <relationshipLabel>Report Package Lines</relationshipLabel>
    <relationshipName>Report_Package_Lines</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Sort_order__c</fullName>
    <label>Sort order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Report Package Line</label>
  <nameField>
    <displayFormat>RPL-{000}</displayFormat>
    <label>Report Package Line Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Report Package Lines</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>